<resources>
    <string name="app_name">Share</string>
    <string name="bem_vindo">Bem vindo!</string>
    <string name="conecte_se_para_continuar">Conecte-se para continuar</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="criar_nova_conta">Criar nova conta</string>
    <string name="foto_de_perfil">Foto de perfil</string>
    <string name="confirme_sua_senha">Confirme sua senha</string>
    <string name="nome">Nome</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="conecte_se">Conecte-se</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="perfil">Perfil</string>
    <string name="salvar">Salvar</string>
    <string name="salvar_altera_es">Salvar alterações</string>
    <string name="meus_an_ncios">Meus anúncios</string>
    <string name="alterar_senha">Alterar senha</string>
    <string name="senha_atual">Senha atual</string>
    <string name="nova_senha">Nova senha</string>
    <string name="confirme_sua_nova_senha">Confirme sua nova senha</string>
    <string name="description_for_change_password">Sua senha deve conter no mínimo 6 caracteres</string>
    <string name="novo_anuncio">Novo anúncio</string>
    <string name="selecione_uma_imagem">Selecione uma imagem</string>
    <string name="titulo_do_anuncio">Título do anúncio</string>
    <string name="descricao_da_vaga">Descrição da vaga</string>
    <string name="casa">Casa</string>
    <string name="apartamento">Apartamento</string>
    <string name="numero_de_banheiros">Número de banheiros</string>
    <string name="numero_de_quartos">Número de quartos</string>
    <string name="numero_de_residentes">Número de residentes</string>
    <string name="valor_do_aluguel">Valor do aluguel</string>
    <string name="continuar">Continuar</string>
    <string name="descricao_do_icone">ícone de adicionar imagem</string>
    <string name="imagem_do_anuncio">Imagem do anúncio</string>
    <string name="Finalizar">finalizar</string>
    <string name="detalhes">Detalhes</string>
    <string name="imagem_detalhes_anuncio">Imagem do anúncio</string>
    <string name="imagem_do_perfil">Imagem do perfil</string>
    <string name="chat">Chat</string>
    <string name="online">Online</string>
    <string name="digite_uma_mensagem">Digite uma mensagem</string>
    <string name="anuncios_salvos">Anúncios salvos</string>
    <string name="cancelar">Cancelar</string>
    <string name="filtrar">Filtrar</string>
    <string name="limpar">Limpar</string>
    <string name="esqueceu_sua_senha">Esqueceu sua senha?</string>
    <string name="redefinir_senha">Redefinir senha</string>
    <string name="informe_seu_e_mail_para_podermos_te_ajudar">Informe seu e-mail para podermos te ajudar!</string>
    <string name="informe_seu_e_mail_para_receber_as_instru_es_necess_rias_e_criar_uma_nova_senha">Informe seu e-mail para receber as instruções necessárias e criar uma nova senha.</string>
    <string name="enviar_e_mail">Enviar e-mail</string>
    <string name="ok">Ok</string>
    <string name="desativar">Desativar</string>
    <string name="reativar">Reativar</string>
</resources>