<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primary"
    tools:context=".activities.AddNewAnnouncementActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_16sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageBack"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/background_icon"
            android:padding="@dimen/_6sdp"
            android:src="@drawable/ic_back"
            android:tint="@color/white"/>

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/novo_anuncio"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageDelete"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/ic_disable"
            android:tint="@color/red"
            android:visibility="gone"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageReactivate"
            android:background="@drawable/background_icon"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/ic_reactivate"
            android:tint="@color/white"
            android:visibility="gone"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:background="@drawable/background_content_bottom"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:padding="@dimen/_24sdp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <FrameLayout
                android:id="@+id/layoutImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageAnnouncement"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_120sdp"
                    android:background="@drawable/background_input"
                    android:scaleType="centerCrop"
                    app:riv_oval="true"
                    android:contentDescription="@string/imagem_do_anuncio" />

                <ImageView
                    android:id="@+id/iconAddImage"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_add_image"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:contentDescription="@string/descricao_do_icone" />

                <TextView
                    android:id="@+id/textAddImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/selecione_uma_imagem"
                    android:textColor="@color/secondary_text"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:textSize="@dimen/_10ssp"/>
            </FrameLayout>

            <EditText
                android:id="@+id/inputTitle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/background_input"
                android:hint="@string/titulo_do_anuncio"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLength="20"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_13ssp" />

            <EditText
                android:id="@+id/inputDescription"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/background_input"
                android:hint="@string/descricao_da_vaga"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLength="90"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_13ssp" />

            <RadioGroup
                android:id="@+id/rdGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:orientation="horizontal"
                android:gravity="center">
                <RadioButton
                    android:id="@+id/rdHouse"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/casa"
                    android:button="@android:color/transparent"
                    android:background="@drawable/background_radio_selector"
                    android:textColor="@drawable/text_color"
                    android:textSize="@dimen/_13ssp"
                    android:elevation="@dimen/_4sdp"
                    android:padding="@dimen/_10sdp"
                    android:layout_margin="@dimen/_8sdp"/>

                <RadioButton
                    android:id="@+id/rdApartment"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/apartamento"
                    android:button="@android:color/transparent"
                    android:background="@drawable/background_radio_selector"
                    android:textColor="@drawable/text_color"
                    android:textSize="@dimen/_13ssp"
                    android:elevation="@dimen/_4sdp"
                    android:padding="@dimen/_10sdp"
                    android:layout_margin="@dimen/_8sdp"/>
            </RadioGroup>

            <EditText
                android:id="@+id/inputNumberBedrooms"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/background_input"
                android:hint="@string/numero_de_quartos"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_13ssp" />

            <EditText
                android:id="@+id/inputNumberBathrooms"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/background_input"
                android:hint="@string/numero_de_banheiros"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_13ssp" />

            <EditText
                android:id="@+id/inputNumberResidents"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/background_input"
                android:hint="@string/numero_de_residentes"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_13ssp" />

            <EditText
                android:id="@+id/inputPrice"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/background_input"
                android:hint="@string/valor_do_aluguel"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_13ssp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:animateLayoutChanges="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonContinueRegister"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:text="@string/continuar"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold"
                    app:cornerRadius="@dimen/_8sdp" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="center"
                    android:visibility="invisible" />
            </FrameLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>