<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical"
    tools:context=".activities.EditProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_16sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageBack"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/background_icon"
            android:padding="@dimen/_6sdp"
            android:src="@drawable/ic_back"
            android:tint="@color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/alterar_senha"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_content_bottom"
        android:clipToPadding="false"
        android:gravity="center_horizontal"
        android:overScrollMode="never"
        android:padding="@dimen/_24sdp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/inputCurrentPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/background_input"
                android:hint="@string/senha_atual"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_13ssp" />

            <EditText
                android:id="@+id/inputNewPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/background_input"
                android:hint="@string/nova_senha"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_13ssp" />

            <EditText
                android:id="@+id/inputConfirmNewPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/background_input"
                android:hint="@string/confirme_sua_nova_senha"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_13ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:text="@string/description_for_change_password"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_12ssp"
                android:textAlignment="center"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:animateLayoutChanges="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonSaveEdit"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:text="@string/salvar"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold"
                    app:cornerRadius="@dimen/_8sdp" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="center"
                    android:visibility="invisible" />
            </FrameLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>