<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primary"
    tools:context=".activities.EditProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_16sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageBack"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/background_icon"
            android:padding="@dimen/_6sdp"
            android:src="@drawable/ic_back"
            android:tint="@color/white"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/_30sdp"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:text="@string/perfil"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:background="@drawable/background_content_bottom"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:padding="@dimen/_24sdp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <FrameLayout
                android:id="@+id/layoutImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/imageProfile"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:background="@drawable/background_image"
                    android:scaleType="centerCrop"
                    app:riv_oval="true" />
            </FrameLayout>

            <EditText
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/background_input"
                android:hint="@string/nome"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_13ssp" />

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/background_input"
                android:hint="@string/e_mail"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_13ssp" />

            <TextView
                android:id="@+id/textChangePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:text="@string/alterar_senha"
                android:textColor="@color/primary"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:animateLayoutChanges="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonSaveEdit"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:text="@string/salvar"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold"
                    app:cornerRadius="@dimen/_8sdp" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="center"
                    android:visibility="invisible" />
            </FrameLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>